fixed a bunch of stuff again

--- a/GFM/localisation/000_HPM_Misc.csv
+++ b/GFM/localisation/000_HPM_Misc.csv
@@ -123,6 +123,8 @@ AGRESSION_WAR_CONQUEST_ANY_NAME_PER_KHR;Revolt of Hasan Khan Salar;;;;;;;;;;;;;
 NORMAL_WAR_CONQUEST_ANY_NAME_PER_KHR;Revolt of Hasan Khan Salar;;;;;;;;;;;;;
 AGRESSION_WAR_NAME_REPARATIONS_FRA_MEX;The Pastry War;;;;;;;;;;;;;
 NORMAL_WAR_NAME_REPARATIONS_FRA_MEX;The Pastry War;;;;;;;;;;;;;
+AGRESSION_WAR_NAME_REPARATIONS_BOR_MEX;The Pastry War;;;;;;;;;;;;;
+NORMAL_WAR_NAME_REPARATIONS_BOR_MEX;The Pastry War;;;;;;;;;;;;;
 AGRESSION_WAR_NAME_REPARATIONS_FRA_MEX;The Second French Intervention in Mexico;;;;;;;;;;;;;
 NORMAL_WAR_NAME_REPARATIONS_FRA_MEX;The Second French Intervention in Mexico;;;;;;;;;;;;;
 AGRESSION_WAR_CONQUEST_ANY_NAME_HUN_SRR;The Serbian Revolt;;;;;;;;;;;;;
@@ -2947,3 +2949,4 @@ lpl_1826_constitution_desc;In 1826 we signed a constitution to centralize our co
 CEDESOMALILANDEGY;The $FROMCOUNTRY_ADJ$ have asked that we cede all lands inside their claimed territories of $FROMCOUNTRY_ADJ$ Somaliland to them to 'pacify' the Somali tribes of the region. This is clearly an attack on our sovereignty, but $FROMCOUNTRY$ is powerful enough to enforce their claim if we reject.;;;;;;;;;;;;;
 DEMARCATEDYEAHLETSGOO;Liberia has agreed to demarcate our border, ending any possible conflicts between us in the matter of jurisdiction.;;;;;;;;;;;;;
 DIDNTDEMARCATEMAN;Liberia has refused to demarcate our border in favorable terms. We now must think of a reply to this insult.;;;;;;;;;;;;;
+ALAWITEDYNASTY;With the departure of the Alawite Dynasty from our lands, their dynasty name can no longer represent our state.;;;;;;;;;;;;;
