even more fixes yeah

--- a/GFM/localisation/00_HPM_countries.csv
+++ b/GFM/localisation/00_HPM_countries.csv
@@ -6,6 +6,10 @@ TMT_ADJ;Tuamotu;;;;;;;;;;;;;
 ION_radical;Ethnikón Rizospastikón Kómma;;;;;;;;;;;;;
 VTU;Vanuatu;;;;;;;;;;;;;
 VTU_ADJ;Ni-Vanuatu;;;;;;;;;;;;;
+BSG;Busoga;;;;;;;;;;;;;
+BSG_ADJ;Busoga;;;;;;;;;;;;;
+SMN;Solima;;;;;;;;;;;;;
+SMN_ADJ;Solimana;;;;;;;;;;;;;
 SMO;Samoa;;;;;;;;;;;;;
 SMO_ADJ;Samoan;;;;;;;;;;;;;
 ZRU;Zuru;;;;;;;;;;;;;
