--- a/GFM/localisation/00_GSG_decisions.csv
+++ b/GFM/localisation/00_GSG_decisions.csv
@@ -1,8 +1,8 @@
 Key;English;French;German;Polish;Spanish;Italian;Swedish;Czech;Hungarian;Dutch;Portuguese;Russian;Finnish;
 law_of_guarantees2_title;Law of Guarantees;;;;;;;;;;;;;
 law_of_guarantees2_desc;Amendments need to be made to the law about other nations we have come in control of.;;;;;;;;;;;;;
-maldives_protectorate_title;Maldives Protectorate;;;;;;;;;;;;;
-maldives_protectorate_desc;With our power over the Maldivian Sultanate we can force him to accept our indirect rule.;;;;;;;;;;;;;
+maldives_protectorate_title;The Maldives Protectorate;;;;;;;;;;;;;
+maldives_protectorate_desc;Located southwest of Ceylon in the Indian Ocean, the Maldives are an archipelago made up of over a thousand islands. They are ruled by the Huraa dynasty, who have been Sultans since 1744. The archipelago was briefly colonized by the Dutch, before a local revolt with British backing forced them to withdraw. Since then, the Maldives have been independent and largely neutral. It is clear, however, that the Sultan has no way of defending the islands from foreign powers, a possibility which is becoming more likely with the colonization of Africa, South and Southeast Asia progressing ever more rapidly. We should therefore propose a treaty of protection to the Sultan, making him give up his sovereignty in matters of foreign policy but allowing him continued self-government. He will certainly accept.;;;;;;;;;;;;;
 become_kitara_title;Reform Kitara;;;;;;;;;;;;;
 become_kitara_desc;Our dominant position in the Great Lakes region gives us claim on the ancient Empire of Kitara.;;;;;;;;;;;;;
 spanish_restoration_2_title;Reclaim Gibraltar!;;;;;;;;;;;;;
