--- a/GFM/localisation/LocMergeFile.csv
+++ b/GFM/localisation/LocMergeFile.csv
@@ -774,9 +774,9 @@ edb21cf5-942a-43e6-b418-106a875e9b0f.shatter_release_event_title;Shatter: $FROMC
 edb21cf5-942a-43e6-b418-106a875e9b0f.shatter_release_event_desc;\nThe time has come to grant self-rule to $FROMCOUNTRY$.;;;;;;;;;;;;;
 edb21cf5-942a-43e6-b418-106a875e9b0f.shatter_release_event_opt0;If we must.;;;;;;;;;;;;;
 DVG_badboy_1;Lack of International Code;;;;;;;;;;;;;
-DVG_badboy_1_desc;Europe and the rest of the world are still embroiled in war and chaos as the Great Powers haven't agreed to create a set of rules for International Diplomacy. The Brandeburgian Peace saw the recognition of the state as a diplomatic actor but beyond that might still makes right. However if Europe was shaken to its core by a great change of power then we might see a new era of limited warfare put in place by the European powers and of course the rest of the world.;;;;;;;;;;;;;
+DVG_badboy_1_desc;The Great Powers of this Shattered World have not settled any International Codes yet.;;;;;;;;;;;;;
 DVG_badboy_2;Lack of International Code;;;;;;;;;;;;;
-DVG_badboy_2_desc;Europe and the rest of the world are still embroiled in war and chaos as the Great Powers haven't agreed to create a set of rules for International Diplomacy. The Brandeburgian Peace saw the recognition of the state as a diplomatic actor but beyond that might still makes right. However if Europe was shaken to its core by a great change of power then we might see a new era of limited warfare put in place by the European powers and of course the rest of the world.;;;;;;;;;;;;;
+DVG_badboy_2_desc;The Great Powers of this Shattered World have not settled any International Codes yet.;;;;;;;;;;;;;
 ASSIMILATE_EFFECT;Assimilate all Pops in state\n;;;;;;;;;;;;;
 WORLD_WARS_ENABLE_DESC;Great wars can now become World wars;;;;;;;;;;;;;
 WORLD_WARS_ENABLED_DESC;World wars are enabled;;;;;;;;;;;;;
