--- a/GFM/localisation/000_HPM_Misc.csv
+++ b/GFM/localisation/000_HPM_Misc.csv
@@ -2950,3 +2950,4 @@ CEDESOMALILANDEGY;The $FROMCOUNTRY_ADJ$ have asked that we cede all lands inside
 DEMARCATEDYEAHLETSGOO;Liberia has agreed to demarcate our border, ending any possible conflicts between us in the matter of jurisdiction.;;;;;;;;;;;;;
 DIDNTDEMARCATEMAN;Liberia has refused to demarcate our border in favorable terms. We now must think of a reply to this insult.;;;;;;;;;;;;;
 ALAWITEDYNASTY;With the departure of the Alawite Dynasty from our lands, their dynasty name can no longer represent our state.;;;;;;;;;;;;;
+RUSSIANCIVILWARJOEVER;The Russian Civil War has come to an end. The glorious revolution has reached every corner of the White Movement's controlled land and we can now unite.;;;;;;;;;;;;;
