--- a/GFM/localisation/000_HPM_Misc.csv
+++ b/GFM/localisation/000_HPM_Misc.csv
@@ -2951,3 +2951,4 @@ DEMARCATEDYEAHLETSGOO;Liberia has agreed to demarcate our border, ending any pos
 DIDNTDEMARCATEMAN;Liberia has refused to demarcate our border in favorable terms. We now must think of a reply to this insult.;;;;;;;;;;;;;
 ALAWITEDYNASTY;With the departure of the Alawite Dynasty from our lands, their dynasty name can no longer represent our state.;;;;;;;;;;;;;
 RUSSIANCIVILWARJOEVER;The Russian Civil War has come to an end. The glorious revolution has reached every corner of the White Movement's controlled land and we can now unite.;;;;;;;;;;;;;
+ZAIANWAR;The Zaian Confederacy and other states inside the Tamazight Confederation raid our colonial possessions in Morocco almost daily, destroying numerous towns and weakening our defenses against potential invasions by other colonial powers. Our technological advantage against the Confederation is large, and we can use that to our advantage in a potential campaign against them.;;;;;;;;;;;;;
