Great Tartaria has been unleashed!

--- a/GFM/localisation/0000_GFM_Deer.csv
+++ b/GFM/localisation/0000_GFM_Deer.csv
@@ -72,6 +72,10 @@ kaz_conquer_kokand_title;Conquer the Khanate of Kokand;;;;;;;;;;;;;
 kaz_conquer_kokand_desc;Unite the Kazakh Steppe;;;;;;;;;;;;;
 kaz_conquer_kyrgyz_title;Put an end to Kyrgyz raids;;;;;;;;;;;;;
 kaz_conquer_kyrgyz_desc;Unite the Kazakh Steppe;;;;;;;;;;;;;
+great_tartaria1_title;Reclaim the Former Tatar Homeland;;;;;;;;;;;;;
+great_tartaria1_desc;Epic Tartaria Larp Stage 1;;;;;;;;;;;;;
+great_tartaria2_title;Proclaim the Empire of Great Tartaria;;;;;;;;;;;;;
+great_tartaria2_desc;Epic Tartaria Larp Stage 2;;;;;;;;;;;;;
 junior_colonize_steppe_title;Consolidate the Syr Darya delta;;;;;;;;;;;;;
 junior_colonize_steppe_desc;With the Junior Jüz Kazakhs a free and independent people once again, we can consolidate the remaining disorganized territories in the Syr Darya delta and bring the Kazakhs living there into the fold.;;;;;;;;;;;;;
 unite_kazakhstan_title;Unite the Kazakh Steppe;;;;;;;;;;;;;
