--- a/GFM/localisation/00_HPM_countries.csv
+++ b/GFM/localisation/00_HPM_countries.csv
@@ -2227,6 +2227,12 @@ TAI_fascist;Fascist Party;;;;;;;;;;;;;
 NJN;Najran;;;;;;;;;;;;;
 NJN_ADJ;Najrani;;;;;;;;;;;;;
 TAR;Tatarstan;;;;;;;;;;;;;
+TAR_semi_constitutional_empire;Great Tartaria;;;;;;;;;;;;;
+TAR_semi_constitutional_empire_ADJ;Tartar;;;;;;;;;;;;;
+TAR_constitutional_empire;Great Tartaria;;;;;;;;;;;;;
+TAR_constitutional_empire_ADJ;Tartar;;;;;;;;;;;;;
+TAR_absolute_empire;Great Tartaria;;;;;;;;;;;;;
+TAR_absolute_empire_ADJ;Tartar;;;;;;;;;;;;;
 TAR_prov_gov_conservative;Idel-Ural;;;;;;;;;;;;;
 TAR_ADJ;Tatar;;;;;;;;;;;;;
 TAR_conservative;The Conservatives;Faction royale;Königsfraktion;;;;;;;;;;;
