East Indies default loc

--- a/GFM/localisation/LocMergeFile.csv
+++ b/GFM/localisation/LocMergeFile.csv
@@ -708,7 +708,7 @@ EVTDESC999971;Due to belief in the neo-liberal theory consumption in our country
 EVTNAME48300_NEWS_TITLE;Duke of All Anhalt;;Herzog von Ganz Anhalt;;;;;;;;;;;
 EVTNAME23400_NEWS_TITLE;International Olympic Committee;;Internationales Olympisches Komitee;;;;;;;;;;;
 EVTNAME36700_NEWS_TITLE;De Vlaamse Leeuw';;De Vlaamse Leeuw;;;;;;;;;;;
-EIC;The East India Company;;;;;;;;;;;;;
+EIC;The East Indies;;;;;;;;;;;;;
 EIC_absolute_monarchy;The Empire of the East Indies;;;;;;;;;;;;;
 EIC_prussian_constitutionalism;The Empire of the East Indies;;;;;;;;;;;;;
 EIC_hms_government;The Empire of the East Indies;;;;;;;;;;;;;
