--- a/GFM/localisation/0000Trigori_text.csv
+++ b/GFM/localisation/0000Trigori_text.csv
@@ -627,3 +627,18 @@ LSK_reactionary_company;Orthodox Church;;;;;;;;;;;;;
 LSK_conservative_company;Company Rule;;;;;;;;;;;;;
 LSK_liberal_company;Petersburg Shareholders;;;;;;;;;;;;;
 LSK_radical_company;Promyshlenniki;;;;;;;;;;;;;
+LIE_democracy;Vaduz-Schellenberg;;;;;;;;;;;;;
+LIE_democracy_ADJ;Vaduz-Schellenberger;;;;;;;;;;;;;
+LIE_proletarian_dictatorship;Rhaetikon Commune;;;;;;;;;;;;;
+LIE_proletarian_dictatorship_ADJ;Rhaetikonian;;;;;;;;;;;;;
+LIE_radical_republic;Rhaetian Republic;;;;;;;;;;;;;
+LIE_radical_republic_ADJ;Rhaetian;;;;;;;;;;;;;
+LIE_liberal;Liberalen;;;;;;;;;;;;;
+LIE_liberal_2;Christlich-Soziale Volkspartei;;;;;;;;;;;;;
+LIE_reactionary;Ultrakonservativen;;;;;;;;;;;;;
+LIE_conservative;Konservativen;;;;;;;;;;;;;
+LIE_conservative_2;Fortschrittliche Bürgerpartei;;;;;;;;;;;;;
+LIE_socialist;Arbeiterverband;;;;;;;;;;;;;
+LIE_radical;Revolutionsverein;;;;;;;;;;;;;
+LIE_communist;Arbeiterpartei;;;;;;;;;;;;;
+LIE_fascist;Volksdeutsche Bewegung;;;;;;;;;;;;;
