--- a/GFM/localisation/0000Trigori_text.csv
+++ b/GFM/localisation/0000Trigori_text.csv
@@ -627,8 +627,10 @@ LSK_reactionary_company;Orthodox Church;;;;;;;;;;;;;
 LSK_conservative_company;Company Rule;;;;;;;;;;;;;
 LSK_liberal_company;Petersburg Shareholders;;;;;;;;;;;;;
 LSK_radical_company;Promyshlenniki;;;;;;;;;;;;;
-LIE_democracy;Vaduz-Schellenberg;;;;;;;;;;;;;
-LIE_democracy_ADJ;Vaduz-Schellenberger;;;;;;;;;;;;;
+LIE_democracy;Oberrhein;;;;;;;;;;;;;
+LIE_democracy_ADJ;Oberrhenish;;;;;;;;;;;;;
+LIE_presidential_dictatorship;Oberrhein;;;;;;;;;;;;;
+LIE_presidential_dictatorship_ADJ;Oberrhenish;;;;;;;;;;;;;
 LIE_proletarian_dictatorship;Rhaetikon Commune;;;;;;;;;;;;;
 LIE_proletarian_dictatorship_ADJ;Rhaetikonian;;;;;;;;;;;;;
 LIE_radical_republic;Rhaetian Republic;;;;;;;;;;;;;
