I pressed enter while writing the commit title
Anyway, Albania can no longer be integrated into puppet YUG, but now Bulgaria can for 8 infamy

--- a/GFM/localisation/00_HPM_decisions.csv
+++ b/GFM/localisation/00_HPM_decisions.csv
@@ -1486,7 +1486,7 @@ create_yugoslavia_desc;§RGain 2 infamy§! If the Slavic peoples of the Balkans ar
 albania_in_yugoslavia_title;Incorporate Albania into Yugoslavia;;;;;;;;;;;;;
 albania_in_yugoslavia_desc;The Albanians must be incorporated into the larger Slavic union.;;;;;;;;;;;;;
 bulgaria_in_yugoslavia_title;Incorporate Bulgaria into Yugoslavia;;;;;;;;;;;;;
-bulgaria_in_yugoslavia_desc;The Bulgarians must be incorporated into the larger Slavic union.;;;;;;;;;;;;;
+bulgaria_in_yugoslavia_desc;§RGain 8 infamy§! The Bulgarians must be incorporated into the larger Slavic union.;;;;;;;;;;;;;
 end_of_yugoslavia_serbia_title;The End of Yugoslavia;;;;;;;;;;;;;
 end_of_yugoslavia_serbia_desc;The Slavic union has been sundered. It is time to bring it to an end.;;;;;;;;;;;;;
 end_of_yugoslavia_croatia_title;The End of Yugoslavia;;;;;;;;;;;;;
