North American Native lake renames
and a few lake renames outside of it (Abe's)

--- a/GFM/localisation/000_HPM_Misc.csv
+++ b/GFM/localisation/000_HPM_Misc.csv
@@ -1589,7 +1589,7 @@ PROV3625;Uvs Nuur;;;;;;;;;;;;;
 PROV3626;Khövsgöl Nuur;;;;;;;;;;;;;
 PROV3627;Lake Hongze;;;;;;;;;;;;;
 PROV3628;Lake Mweru;;;;;;;;;;;;;
-PROV3629;Lake Dubawnt;;;;;;;;;;;;;
+PROV3629;Kamilikuak;;;;;;;;;;;;;
 PROV3630;Garabogazköl Aylagy;;;;;;;;;;;;;
 PROV3631;Chott al-Djerid;;;;;;;;;;;;;
 PROV3632;Namakzar;;;;;;;;;;;;;
