--- a/GFM/localisation/text.csv
+++ b/GFM/localisation/text.csv
@@ -11116,7 +11116,7 @@ PROV3113;Lake Erie;Lac Erie;Eriesee;;Lago Erie;;;;;;;;;
 PROV3114;Lake Huron;Lac Huron;Huronsee;;Lago Hurón;;;;;;;;;
 PROV3115;Lake Michigan;Lac Michigan;Michigansee;;Lago Michigan;;;;;;;;;
 PROV3116;Lake Superior;Lac Superior;Superiorsee;;Lago Superior;;;;;;;;;
-PROV3117;Lake Nipigon;Lac Nipigon;Nipigonsee;;Lago Nipigon;;;;;;;;;
+PROV3117;Animbiigoong;Lac Nipigon;Nipigonsee;;Lago Nipigon;;;;;;;;;
 PROV3118;Lake Winnipeg;Lac Winnipeg;Winnipegsee;;Lago Winnipeg;;;;;;;;;
 PROV3119;Korskiyev Gulch;Gorge de Korskiyev ;Korskiyev Gulch;;Depresión de Korskiyev;;;;;;;;;
 PROV3120;Orsova Bank;Banc d'Orsova;Orsova Bank;;Costa de Orsova;;;;;;;;;
@@ -11225,9 +11225,9 @@ PROV3223;Tusei Bank;Banc de Tusei ;Tusei Bank;;Banco de Tusei;;;;;;;;;
 PROV3224;T'ana Hayik'i;Lac Tana;Tanasee;;Lago Tana;;;;;;;;;
 PROV3225;Gran Lago Salado;Gran Lago Salado;Gran Lago Salado;;Gran Lago Salino;;;;;;;;;
 PROV3226;South Australian Plain;Plaine australienne méridionale;Südaustralische Ebene;;Litoral meridional de Australian ;;;;;;;;;
-PROV3227;Great Slave Lake;Grand lac des esclaves;Großer Sklavensee;;Gran Lago del Esclavo;;;;;;;;;
-PROV3228;Lake Athabasca;Lac Athabasca;Athabascasee;;Lago Athabasca;;;;;;;;;
-PROV3229;Reindeer Lake;Lac Reindeer;Reindeersee;;Lago Reindeer;;;;;;;;;
+PROV3227;Awokanek-sâkahikan;Grand lac des esclaves;Großer Sklavensee;;Gran Lago del Esclavo;;;;;;;;;
+PROV3228;Aðapaskaw;Lac Athabasca;Athabascasee;;Lago Athabasca;;;;;;;;;
+PROV3229;Uashteshushkau;Lac Reindeer;Reindeersee;;Lago Reindeer;;;;;;;;;
 PROV3230;Gulf of Ob;Golfe d'Ob;Golf von Ob;;Golfo de Ob;;;;;;;;;
 PROV3231;Gola Wanê;Lac Van;Van-See;;Lago Van;;;;;;;;;
 PROV3232;Daryacheh-ye Orumiye;Lac Urmia;Urmiasee;;Lago Urmia;;;;;;;;;
