--- a/GFM/localisation/0000Trigori_text.csv
+++ b/GFM/localisation/0000Trigori_text.csv
@@ -633,7 +633,7 @@ LIE_presidential_dictatorship;Oberrhein;;;;;;;;;;;;;
 LIE_presidential_dictatorship_ADJ;Oberrhenish;;;;;;;;;;;;;
 LIE_proletarian_dictatorship;Rhaetikon Commune;;;;;;;;;;;;;
 LIE_proletarian_dictatorship_ADJ;Rhaetikonian;;;;;;;;;;;;;
-LIE_radical_republic;Rhaetian Republic;;;;;;;;;;;;;
+LIE_radical_republic;The Rhaetian Republic;;;;;;;;;;;;;
 LIE_radical_republic_ADJ;Rhaetian;;;;;;;;;;;;;
 LIE_liberal;Liberalen;;;;;;;;;;;;;
 LIE_liberal_2;Christlich-Soziale Volkspartei;;;;;;;;;;;;;
@@ -644,3 +644,19 @@ LIE_socialist;Arbeiterverband;;;;;;;;;;;;;
 LIE_radical;Revolutionsverein;;;;;;;;;;;;;
 LIE_communist;Arbeiterpartei;;;;;;;;;;;;;
 LIE_fascist;Volksdeutsche Bewegung;;;;;;;;;;;;;
+GEO_radical_republic;The Kartvelian Republic;;;;;;;;;;;;;
+ABK_reactionary;Sharvashidze;;;;;;;;;;;;;
+MIG_reactionary;Dadiani;;;;;;;;;;;;;
+SVA_reactionary;Dadeshkeliani;;;;;;;;;;;;;
+GEO_pirveli;Pirveli Dasi;;;;;;;;;;;;;
+GEO_meore;Meore Dasi;;;;;;;;;;;;;
+GEO_mesame;Mesame Dasi;;;;;;;;;;;;;
+GEO_terg;Tergdaleulebi;;;;;;;;;;;;;
+GEO_conservative;Erovnul-Demokratiuli Partia;;;;;;;;;;;;;
+GEO_liberal;Mitsis Mesakutreta Erovnuli Partia;;;;;;;;;;;;;
+GEO_reactionary;Bagrationi;;;;;;;;;;;;;
+GEO_reactionary_ktk;Kartvel Traditsionalistta Kavshiri;;;;;;;;;;;;;
+GEO_radical;Tsisperqantselebi;;;;;;;;;;;;;
+GEO_socialist;Sakartvelos Sotsial-Demokratiuli Partia;;;;;;;;;;;;;
+GEO_communist;Sakartvelos Komunisturi Partia;;;;;;;;;;;;;
+GEO_fascist;Erovnuli Ertobis Darazmuloba "Tetri Giorgi";;;;;;;;;;;;;
