--- a/GFM/localisation/00_HPM_decisions.csv
+++ b/GFM/localisation/00_HPM_decisions.csv
@@ -778,7 +778,7 @@ integrate_abkhazia_title;Integrate Abkhazia;;;;;;;;;;;;;
 integrate_abkhazia_desc;§RGain 0.5 infamy§! The autonomy of Abkhazia, which had functioned as a pro-Russian "buffer zone" in the troublesome region of the Caucasus, was no more needed to the Tsarist government after the Circassians were defeated and pacified, and the rule of the Shervashidze came to an end: Prince Michael was forced to renounce his rights and resettle in Voronezh. Abkhazia was incorporated in the Russian Empire as a special military province of Suhum-Kale.;;;;;;;;;;;;;
 support_the_circassians_title;Officially Recognize Circassia;;;;;;;;;;;;;
 support_the_circassians_desc;We will extend formal recognition of Circassia, opening an embassy in their capital and formally establishing relations. The Russians will, of course, not approve.;;;;;;;;;;;;;
-make_abkhazia_orthodox_title;Make Orthodox Catholicism the Official Religion in Abkhazia;;;;;;;;;;;;;
+make_abkhazia_orthodox_title;Make Orthodox Christianity the Official Religion in Abkhazia;;;;;;;;;;;;;
 make_abkhazia_orthodox_desc;The Orthodox minorities long have been oppressed in Abkhazia. It's time to exert our power in Abkhazia and put them in power so Abkhazian religious policy is in unison with ours.;;;;;;;;;;;;;
 make_abkhazia_sunni_title;Make Sunni Islam the Official Religion in Abkhazia;;;;;;;;;;;;;
 make_abkhazia_sunni_desc;The Sunni minorities long have been oppressed in Abkhazia. It's time to exert our power in Abkhazia and put them in power so Abkhazian religious policy is in unison with ours.;;;;;;;;;;;;;
@@ -796,7 +796,7 @@ make_transcaucasia_sunni_title;Make Sunni Islam the Official Religion in Transca
 make_transcaucasia_sunni_desc;The Sunni minorities long have been oppressed in Transcaucasia. It's time to exert our power in Transcaucasia and put them in power so Transcaucasia religious policy is in unison with ours.;;;;;;;;;;;;;
 make_transcaucasia_shiite_title;Make Shiite Islam the Official Religion in Transcaucasia;;;;;;;;;;;;;
 make_transcaucasia_shiite_desc;The Shiite minorities long have been oppressed in Transcaucasia. It's time to exert our power in Transcaucasia and put them in power so Transcaucasia religious policy is in unison with ours.;;;;;;;;;;;;;
-make_transcaucasia_orthodox_title;Make Orthodox Catholicism the Official Religion in Transcaucasia;;;;;;;;;;;;;
+make_transcaucasia_orthodox_title;Make Orthodox Christianity the Official Religion in Transcaucasia;;;;;;;;;;;;;
 make_transcaucasia_orthodox_desc;The Orthodox minorities long have been oppressed in Transcaucasia. It's time to exert our power in Transcaucasia and put them in power so Transcaucasia religious policy is in unison with ours.;;;;;;;;;;;;;
 fatherland_altar_title;Build an Altar for the Fatherland;;;;;;;;;;;;;
 fatherland_altar_desc;There's a proposal in the cabinet to build an Altar of the Fatherland (Altare della Patria) in honor of the main engineer of a unified Italy to be built in Rome, in a site between the Piazza Venezia and the Capitoline Hill. The main architect, Giuseppe Sacconi, envisions a monument made of marble, with huge bronze statues of our heroes and Quadrigas heralding the coming of a unified Italy, for all Italians. We should pick up this project and build the monument so all nations can see the glory of our great nation.;;;;;;;;;;;;;
