--- a/GFM/localisation/0000Sitka.csv
+++ b/GFM/localisation/0000Sitka.csv
@@ -75,7 +75,7 @@ Claim_ARM_desc;§RGain 14 infamy§! Now that we have secured our core lands, we mu
 Claim_AZB_title;Greater Azerbaijan;;;;;;;;;;;;;
 Claim_AZB_desc;§RGain 10 infamy§! Now that we have secured our core lands, we must strive to achieve a truly noble vision: All Azerbaijanis must be united in a Greater Azerbaijani state.;;;;;;;;;;;;;
 Accept_Georgians_title;Accept the Georgians;;;;;;;;;;;;;
-Accept_Georgians_desc;The Georgian peoples are not so different from us: They live in the same region, practice the same religion and have the same enemies. It would bring stability to our lands if we accepted them as citizens, though it will hurt our prestige to accept another culture.;;;;;;;;;;;;;
+Accept_Georgians_desc;Despite differences in language and religion, the Georgians are not so different from us - their old royal dynasty, the Bagratids, even has Armenian origins. It would bring stability to our lands if we accepted them as citizens, though it will hurt our prestige to accept another culture.;;;;;;;;;;;;;
 Claim_KDS_title;Greater Kurdistan;;;;;;;;;;;;;
 Claim_KDS_desc;§RGain 14 infamy§! Now that we have secured our core lands we must strive to achieve a truly noble vision: All Kurds must be united in a greater Kurdish state.;;;;;;;;;;;;;
 Claim_URU_title;Greater Uruguay;;;;;;;;;;;;;
@@ -156,7 +156,7 @@ Claim_BAB_desc;Now that we have declared ourselves the legitimate successors to 
 Claim_GEO_title;Greater Georgia;;;;;;;;;;;;;
 Claim_GEO_desc;§RGain 7 infamy§! Now that we have taken the lands which we had under our control until not too long ago, we can exercise our claim on the borders of the 13th century Georgian kingdom.;;;;;;;;;;;;;
 Accept_Armenians_title;Accept the Armenians;;;;;;;;;;;;;
-Accept_Armenians_desc;The Armenian peoples are not so different from us: They live in the same region, practice the same religion and have the same enemies. It would bring stability to our lands if we accepted them as citizens, though it will hurt our prestige to accept another culture.;;;;;;;;;;;;;
+Accept_Armenians_desc;Despite differences in language and religion, the Armenians are not so different from us - our old royal dynasty, the Bagratids, even has Armenian origins. It would bring stability to our lands if we accepted them as citizens, though it will hurt our prestige to accept another culture.;;;;;;;;;;;;;
 Claim_Alex_title;Claim Alexander's Empire;;;;;;;;;;;;;
 Claim_Alex_desc;Now that we control Constantinople, Cairo, Baghdad, Tehran and Lahore, we can justify this occupation by citing the historical empire of Alexander the Great.;;;;;;;;;;;;;
 Mongols_claim_title;More land claims!;;;;;;;;;;;;;
