Header was missing

--- a/GFM/localisation/Russo_Japanese_War.csv
+++ b/GFM/localisation/Russo_Japanese_War.csv
@@ -1,3 +1,4 @@
+Key;English;French;German;Polish;Spanish;Italian;Swedish;Czech;Hungarian;
 russo_japanese_war_title;Ambush the Russian Fleet in Port Arthur;;;;;;;;;;;;;
 russo_japanese_war_desc;Tension has been roiling between Japan and Russia for some time as both nations have attempted to consolidate military and economic footholds in Korea and northern China. This rivalry cannot stay peaceful any longer. We must defeat Russia in war if we shall ever become the masters of the East.;;;;;;;;;;;;;
 russo_japanese_war_japanese_treaty_title;A Treaty with Russia;;;;;;;;;;;;;
