Preparing GEO and TCA

--- a/GFM/localisation/0000Trigori_text.csv
+++ b/GFM/localisation/0000Trigori_text.csv
@@ -660,3 +660,9 @@ GEO_radical;Tsisperqantselebi;;;;;;;;;;;;;
 GEO_socialist;Sakartvelos Sotsial-Demokratiuli Partia;;;;;;;;;;;;;
 GEO_communist;Sakartvelos Komunisturi Partia;;;;;;;;;;;;;
 GEO_fascist;Erovnuli Ertobis Darazmuloba "Tetri Giorgi";;;;;;;;;;;;;
+GEO_absolute_empire;Kartli-Kakheti;;;;;;;;;;;;;
+GEO_semi_constitutional_empire;Kartli-Kakheti;;;;;;;;;;;;;
+GEO_constitutional_empire;Kartli-Kakheti;;;;;;;;;;;;;
+TCA_absolute_empire;The Bagratid Empire;;;;;;;;;;;;;
+TCA_semi_constitutional_empire;The Bagratid Empire;;;;;;;;;;;;;
+TCA_constitutional_empire;The Bagratid Empire;;;;;;;;;;;;;
