--- a/GFM/localisation/00_HPM_countries.csv
+++ b/GFM/localisation/00_HPM_countries.csv
@@ -2396,8 +2396,8 @@ UNM_radical;Libertarian Party;;;;;;;;;;;;;
 UNM_socialist;Socialist Party;;;;;;;;;;;;;
 UNM_communist;Communist Party;;;;;;;;;;;;;
 UNM_fascist;Fascist Party;;;;;;;;;;;;;
-UOR;The Oregon Country;;;;;;;;;;;;;
-UOR_prov_gov_conservative;The Provisional Government of Oregon;;;;;;;;;;;;;
+UOR;Oregon;;;;;;;;;;;;;
+UOR_prov_gov_conservative;The Oregon Country;;;;;;;;;;;;;
 UOR_absolute_monarchy;The Kingdom of Oregon;;;;;;;;;;;;;
 UOR_prussian_constitutionalism;The Kingdom of Oregon;;;;;;;;;;;;;
 UOR_hms_government;Oregon;;;;;;;;;;;;;
