--- a/GFM/localisation/000_HPM_Misc.csv
+++ b/GFM/localisation/000_HPM_Misc.csv
@@ -3007,3 +3007,4 @@ DIDNTDEMARCATEMAN;Liberia has refused to demarcate our border in favorable terms
 ALAWITEDYNASTY;With the departure of the Alawite Dynasty from our lands, their dynasty name can no longer represent our state.;;;;;;;;;;;;;
 RUSSIANCIVILWARJOEVER;The Russian Civil War has come to an end. The glorious revolution has reached every corner of the White Movement's controlled land and we can now unite.;;;;;;;;;;;;;
 ZAIANWAR;The Zaian Confederacy and other states inside the Tamazight Confederation raid our colonial possessions in Morocco almost daily, destroying numerous towns and weakening our defenses against potential invasions by other colonial powers. Our technological advantage against the Confederation is large, and we can use that to our advantage in a potential campaign against them.;;;;;;;;;;;;;
+EGYPTCOLONE;\n\nNow that we have conquered Egypt, the time has come to impose a colonial administration on it.;;;;;;;;;;;;;
