--- a/GFM/localisation/all_event_descriptions.csv
+++ b/GFM/localisation/all_event_descriptions.csv
@@ -1222,7 +1222,7 @@ EVTDESC4778742;\n\nAI: Dismantlement Victor Tracking;;;;;;;;;;;;;
 EVTDESC4778743;\n\nWe have announced to the world our intent to fully dismantle a country. This will not be easy.;;;;;;;;;;;;;
 EVTDESC4778746;\n\nAI: Dismantlement Buffer Trigger;;;;;;;;;;;;;
 EVTDESC4778747;\n\nAI: Dismantlement Buffer Event;;;;;;;;;;;;;
-EVTDESC777770610;\n\nOur lands may be transfered though dismantlement.;;;;;;;;;;;;;
+EVTDESC777770610;\n\nOur lands may be transferred though dismantlement.;;;;;;;;;;;;;
 EVTDESC777770620;\n\n$FROMCOUNTRY$ is controlled by the defeated power, what should be done with it?;;;;;;;;;;;;;
 EVTDESC777770621;\n\n$FROMCOUNTRY$ is controlled by the defeated power, what should be done with it?;;;;;;;;;;;;;
 EVTDESC777770623;\n\n$FROMCOUNTRY$ is controlled by the defeated power, what should be done with it?;;;;;;;;;;;;;
@@ -1818,3 +1818,12 @@ BERELJNAEPTS;\n\nThey have agreed to protect us in the future.;;;;;;;;;;;;;
 BERELJNONAEPTS;\n\nThey have refused to protect us in the future.;;;;;;;;;;;;;
 INTEGRATEBAALTIC;\n\nThe Baltic provinces have submitted to our integration.;;;;;;;;;;;;;
 WHATHAVEYOUDONEWHATHOW;\n\nThey must have reneged on our treaty...;;;;;;;;;;;;;
+EVTDESC9874027;\n\nThis event assimilates provinces with tiny minorities for performance reasons.;;;;;;;;;;;;;
+EGYPTCOLONE;\n\nNow that we have conquered Egypt, the time has come to impose a colonial administration on it.;;;;;;;;;;;;;
+EVTDESC325511;\n\nThe $FROMCOUNTRY_ADJ$ diplomats have agreed to our offer to purchase Tarfaya. The handover has taken place, and the $COUNTRY_ADJ$ flag now flies in the Port Victoria Fortress.;;;;;;;;;;;;;
+EVTDESC325521;\n\nThe $FROMCOUNTRY_ADJ$ diplomats have declined our offer to purchase Tarfaya.;;;;;;;;;;;;;
+EVTDESC19133543;\n\nAfter the Bolivian invasion, the $FROMCOUNTRY_ADJ$ bastards has not only decided to cut ties with us, but also show their support to Santa Cruz as well.;;;;;;;;;;;;;
+EVTDESC9938891;\n\nWith the rising tide of nationalism in Mexico, our fort in Mexico City has been attacked.;;;;;;;;;;;;;
+EVTDESC42069751;\n\nWhich from the following should be our capital?;;;;;;;;;;;;;
+EVTDESC298081;\n\nThe Venezuelans have accepted to sign the treaty.;;;;;;;;;;;;;
+EVTDESC298082;\n\nThe Venezuelans has rejected to sign the treaty.;;;;;;;;;;;;;
