--- a/GFM/localisation/00_HPM_map.csv
+++ b/GFM/localisation/00_HPM_map.csv
@@ -498,7 +498,7 @@ PROV2953;New York Bight;;;;;;;;;;;;;
 PROV2954;Chesapeake Bay;;;;;;;;;;;;;
 PROV3102;Ukerewe;;;;;;;;;;;;;
 PROV3104;Lake Nyasa;;;;;;;;;;;;;
-PROV3106;Balqash köli;;;;;;;;;;;;;
+PROV3106;Balqash Köli;;;;;;;;;;;;;
 PROV3107;Ozero Baykal;;;;;;;;;;;;;
 PROV3126;Coast of Minami;;;;;;;;;;;;;
 PROV3236;Anam a Cheper;;;;;;;;;;;;;
