improve things about DNN

--- a/GFM/localisation/00_HPM_countries.csv
+++ b/GFM/localisation/00_HPM_countries.csv
@@ -3420,9 +3420,14 @@ DNN;Denmark-Norway;;;;;;;;;;;;;
 DNN_ADJ;Dano-Norwegian;;;;;;;;;;;;;
 DNN_proletarian_dictatorship;Nordic Union;;;;;;;;;;;;;
 DNN_presidential_dictatorship;Copenhagen Council;;;;;;;;;;;;;
-DNN_parliamentary_republic;The Dano-Norwegian Republic;;;;;;;;;;;;;
+DNN_radical_republic;The Dano-Norwegian Republic;;;;;;;;;;;;;
 DNN_fascist_dictatorship;The Norse State;;;;;;;;;;;;;
-DNN_monarchy;Denmark-Norway;;;;;;;;;;;;;
+DNN_absolute_empire;Norway-Denmark;;;;;;;;;;;;;
+DNN_absolute_empire_ADJ;Norwegian-Danish;;;;;;;;;;;;;
+DNN_constitutional_empire;Norway-Denmark;;;;;;;;;;;;;
+DNN_constitutional_empire_ADJ;Norwegian-Danish;;;;;;;;;;;;;
+DNN_semi_constitutional_empire;Norway-Denmark;;;;;;;;;;;;;
+DNN_semi_constitutional_empire_ADJ;Norwegian-Danish;;;;;;;;;;;;;
 DNN_democracy;Scandinavian Republic;;;;;;;;;;;;;
 LUS;Lusatia;;;;;;;;;;;;;
 LUS_ADJ;Lusatian;;;;;;;;;;;;;
@@ -3986,24 +3991,12 @@ LUN_constitutional_empire;Lunda Empire;;;;;;;;;;;;;
 LUN_constitutional_empire_ADJ;Lunda;;;;;;;;;;;;;
 LUN_semi_constitutional_empire;Lunda Empire;;;;;;;;;;;;;
 LUN_semi_constitutional_empire_ADJ;Lunda;;;;;;;;;;;;;
-DEN_absolute_empire;Denmark-Norway;;;;;;;;;;;;;
-DEN_absolute_empire_ADJ;Dano-Norwegian;;;;;;;;;;;;;
-DEN_constitutional_empire;Denmark-Norway;;;;;;;;;;;;;
-DEN_constitutional_empire_ADJ;Dano-Norwegian;;;;;;;;;;;;;
-DEN_semi_constitutional_empire;Denmark-Norway;;;;;;;;;;;;;
-DEN_semi_constitutional_empire_ADJ;Dano-Norwegian;;;;;;;;;;;;;
 CMR_absolute_empire;Mandara;;;;;;;;;;;;;
 CMR_absolute_empire_ADJ;Mandaran;;;;;;;;;;;;;
 CMR_constitutional_empire;Mandara;;;;;;;;;;;;;
 CMR_constitutional_empire_ADJ;Mandaran;;;;;;;;;;;;;
 CMR_semi_constitutional_empire;Mandara;;;;;;;;;;;;;
 CMR_semi_constitutional_empire_ADJ;Mandaran;;;;;;;;;;;;;
-NOR_absolute_empire;Norway-Denmark;;;;;;;;;;;;;
-NOR_absolute_empire_ADJ;Norwegian-Danish;;;;;;;;;;;;;
-NOR_constitutional_empire;Norway-Denmark;;;;;;;;;;;;;
-NOR_constitutional_empire_ADJ;Norwegian-Danish;;;;;;;;;;;;;
-NOR_semi_constitutional_empire;Norway-Denmark;;;;;;;;;;;;;
-NOR_semi_constitutional_empire_ADJ;Norwegian-Danish;;;;;;;;;;;;;
 BUG_absolute_empire;Chwezi Empire;;;;;;;;;;;;;
 BUG_absolute_empire_ADJ;Chwezi;;;;;;;;;;;;;
 BUG_constitutional_empire;Chwezi Empire;;;;;;;;;;;;;
