Siberia Pop Rework

--- a/GFM More Cultures/localisation/00000culture submod.csv
+++ b/GFM More Cultures/localisation/00000culture submod.csv
@@ -850,6 +850,9 @@ karatay;Karatay;;;;;;;;;;;;
 soyot;Soyot;;;;;;;;;;;;
 chelkan;Chelkan;;;;;;;;;;;;
 khakass;Khakass;;;;;;;;;;;;
+kyzyl;Kyzyl;;;;;;;;;;;;
+sagay;Sagay;;;;;;;;;;;;
+beltir;Beltir;;;;;;;;;;;;
 kalmaki;Kalmaki;;;;;;;;;;;;
 teleut;Teleut;;;;;;;;;;;;
 kumandin;Kumandin;;;;;;;;;;;;
@@ -873,7 +876,7 @@ shabak;Shabak;;;;;;;;;;;;
 moravian;Moravian;;;;;;;;;;;;
 szekler;Székely;;;;;;;;;;;;
 mezoseg;Mezóségi;;;;;;;;;;;;
-pogarli;Pogarli;;;;;;;;;;;;
+pogarli;Tubyl-Irtesh;;;;;;;;;;;;
 nubian;Nubian;;;;;;;;;;;;
 qarapapaq;Qarapapaq;;;;;;;;;;;;
 twa;Twa;;;;;;;;;;;;
