--- a/GFM/localisation/00_HPM_map.csv
+++ b/GFM/localisation/00_HPM_map.csv
@@ -469,8 +469,8 @@ PROV2677;Ilimsk;;;;;;;;;;;;;
 PROV2681;Taipeh;;;;;;;;;;;;;
 PROV2682;Obdorsk;;;;;;;;;;;;;
 PROV2683;Narym;;;;;;;;;;;;;
-PROV2685;Irbit;;;;;;;;;;;;;
-PROV2686;Kainsk;;;;;;;;;;;;;
+PROV2685;Ishim;;;;;;;;;;;;;
+PROV2686;Biysk;;;;;;;;;;;;;
 PROV2689;Rossosh;;;;;;;;;;;;;
 PROV2690;Agrotur & Dikelya;;;;;;;;;;;;;
 PROV2691;Minusk;;;;;;;;;;;;;
