--- a/GFM/localisation/0000Trigori_text.csv
+++ b/GFM/localisation/0000Trigori_text.csv
@@ -679,3 +679,29 @@ OSS_prussian_constitutionalism;Alania;;;;;;;;;;;;;
 OSS_hms_government;Alania;;;;;;;;;;;;;
 GEO_found_society_title;Found the Society for the Spreading of Literacy Among Georgians;;;;;;;;;;;;;
 GEO_found_society_desc;The Society was a charity founded by the noblemen Ilia Chavchavadze, Dimitri Kipiani, and local educators like Iakob Gogebashvili and Mariam Jambakur-Orbeliani in May 1879 in order to promote a cultural renaissance among the peasantry of Georgia. The Society ran a network of schools, bookshops and libraries throughout the country, trained teachers, and sponsored Georgian-language journals and magazines. Prince Chavchavadze, a prominent writer, went on to play a leading role in the Society, succeeding the first chairman Kipiani in 1885 until his assassination in 1907. In 1885, the Mingrelian prince Niko Dadiani donated his father's rich personal library collection, including old Georgian manuscripts, to the charity. The organization involved virtually all active Georgian men of letters, several philanthropists and officials, and was instrumental in Georgian national revival in the latter half of the 19th century.;;;;;;;;;;;;;
+SLU;The Slavic Union;;;;;;;;;;;;;
+SLU_proletarian_dictatorship;The Union of Socialist Councils;;;;;;;;;;;;;
+SLU_presidential_dictatorship;The Slavic Republic;;;;;;;;;;;;;
+SLU_radical_republic;Republic of the Slavs;;;;;;;;;;;;;
+SLU_fascist_dictatorship;The Great Slavic National State;;;;;;;;;;;;;
+SLU_theocracy;The Patriarchate of All Slavs and the Prince-Bishopric of Montenegro;;;;;;;;;;;;;
+SLU_absolute_monarchy;The Slavic Empire;Manhattanien;Manhattanisch;;Manhattanita;;;;;;;;;
+SLU_prussian_constitutionalism;The Slavic Empire;Manhattanien;Manhattanisch;;Manhattanita;;;;;;;;;
+SLU_hms_government;The Slavic Empire;Manhattanien;Manhattanisch;;Manhattanita;;;;;;;;;
+SLU_absolute_empire;The Slavic Empire;;;;;;;;;;;;;
+SLU_semi_constitutional_empire;The Slavic Empire;;;;;;;;;;;;;
+SLU_constitutional_empire;The Slavic Empire;;;;;;;;;;;;;
+SLU_ADJ;Slavic;;;;;;;;;;;;;
+SLU_theocracy_ADJ;Slavo-Montenegrin;;;;;;;;;;;;;
+SLU_conservative;Šturovites;;;;;;;;;;;;;
+SLU_conservative_1;Slavic Christian Union;;;;;;;;;;;;;
+SLU_liberal;Palackites;;;;;;;;;;;;;
+SLU_liberal_1;Constitutional Democratic Party;;;;;;;;;;;;;
+SLU_reactionary;Slavophiles;;;;;;;;;;;;;
+SLU_reactionary_1;All-Slavic Black Veche;;;;;;;;;;;;;
+SLU_radical;Sabinites;;;;;;;;;;;;;
+SLU_radical_1;National Revolutionary Congress;;;;;;;;;;;;;
+SLU_socialist_1;Socialist Revolutionary Party;;;;;;;;;;;;;
+SLU_socialist_2;Labour Party;;;;;;;;;;;;;
+SLU_communist;Communist Party;;;;;;;;;;;;;
+SLU_fascist;All-Slavic National Radical Party;;;;;;;;;;;;;
