--- a/GFM/localisation/0000Trigori_text.csv
+++ b/GFM/localisation/0000Trigori_text.csv
@@ -705,3 +705,9 @@ SLU_socialist_1;Socialist Revolutionary Party;;;;;;;;;;;;;
 SLU_socialist_2;Labour Party;;;;;;;;;;;;;
 SLU_communist;Communist Party;;;;;;;;;;;;;
 SLU_fascist;All-Slavic National Radical Party;;;;;;;;;;;;;
+UKR_absolute_empire;The Ruthenian Empire;;;;;;;;;;;;;
+UKR_semi_constitutional_empire;The Ruthenian Empire;;;;;;;;;;;;;
+UKR_constitutional_empire;The Ruthenian Empire;;;;;;;;;;;;;
+UKR_absolute_empire_ADJ;Ruthenian;;;;;;;;;;;;;
+UKR_semi_constitutional_empire_ADJ;Ruthenian;;;;;;;;;;;;;
+UKR_constitutional_empire_ADJ;Ruthenian;;;;;;;;;;;;;
