--- a/GFM/localisation/00_HPM_map.csv
+++ b/GFM/localisation/00_HPM_map.csv
@@ -50,7 +50,7 @@ PROV81;Oregon City;;;;;;;;;;;;;
 PROV82;Imatalamlháma;;;;;;;;;;;;;
 PROV83;Yanshuuchit' Taaghii~li~;;;;;;;;;;;;;
 PROV84;Kahwatchwah;;;;;;;;;;;;;
-PROV85;Bitakomtara;;;;;;;;;;;;;
+PROV85;Tantáwats;;;;;;;;;;;;;
 PROV86;Mauwaayu;;;;;;;;;;;;;
 PROV88;Hayikwiir Mat'aar;;;;;;;;;;;;;
 PROV92;Ql'ispé;;;;;;;;;;;;;
