--- a/GFM/localisation/LocMergeFile.csv
+++ b/GFM/localisation/LocMergeFile.csv
@@ -1638,7 +1638,7 @@ unqualified;Unqualified;;;;;;;;;;;;;
 pawn;Pawn;;;;;;;;;;;;;
 elderly;Elderly;;;;;;;;;;;;;
 incompetent;Incompetent;;;;;;;;;;;;;
-PROV3448;Santa Clara;;;;;;;;;;;;;
+PROV3448;Buknínuwad;;;;;;;;;;;;;
 PROV3449;Paháhsu;;;;;;;;;;;;;
 PROV3450;Santa Bárbara;;;;;;;;;;;;;
 PROV3451;Southern Mojave;;;;;;;;;;;;;
