--- a/GFM/localisation/00_HPM_events.csv
+++ b/GFM/localisation/00_HPM_events.csv
@@ -2722,7 +2722,7 @@ EVT44122OPTA;Great!;;;;;;;;;;;;;
 EVT44122OPTB;The US does not compromise. §RGain 4 infamy§W;;;;;;;;;;;;;
 EVTNAME44125;The Western Territories;;;;;;;;;;;;;
 EVTDESC44125;Mexico is not properly utilizing the lands between ours and the Pacific. It is our destiny to bring American rule and prosperity to all of North America, and our responsibility to take these lands from Mexico so they may flourish. To avoid further war with Mexico, we should approach their government and see if they will consider selling these lands to us.;;;;;;;;;;;;;
-EVTNAME44126;The $FROMCOUNTRY_ADJ$ want California!;;;;;;;;;;;;;
+EVTNAME44126;The $FROMCOUNTRY$ want California!;;;;;;;;;;;;;
 EVTDESC44126;\n\nThe American ambassador has informed us that it would be in our best interests to sell the lands north of the Rio Grande to the United States. The amount they offer is considerable, and the northwest territories are of limited value to us, but it is almost an insult that they would think us so eager to give up our rightful territory.;;;;;;;;;;;;;
 EVT44126OPTA;No. That land is rightfully ours.;;;;;;;;;;;;;
 EVT44126OPTB;We cannot afford for this to escalate.;;;;;;;;;;;;;
