manchuria pop rework (again)

--- a/GFM More Cultures/localisation/00000culture submod.csv
+++ b/GFM More Cultures/localisation/00000culture submod.csv
@@ -41,6 +41,7 @@ daur;Daur;;;;;;;;;;;;;
 khamnigan;Khamnigan;;;;;;;;;;;;;
 buryat;Buryat;;;;;;;;;;;;;
 oroqen;Oroqen;;;;;;;;;;;;;
+solon;Solon;;;;;;;;;;;;;
 gutnic;Gutnic;;;;;;;;;;;;;
 monguor;Monguor;;;;;;;;;;;;;
 kam_culture;Kam;;;;;;;;;;;;;
@@ -412,6 +413,7 @@ dukha;Dukha;;;;;;;;;;;;;
 orok;Orok;;;;;;;;;;;;;
 ulcha;Ulcha;;;;;;;;;;;;;
 evenki;Evenki;;;;;;;;;;;;;
+xibe;Xibe;;;;;;;;;;;;;
 negidal;Negidal;;;;;;;;;;;;;
 tofalar;Tofalar;;;;;;;;;;;;;
 votian;Votian;;;;;;;;;;;;;
