--- a/GFM/localisation/00000_Naimakka.csv
+++ b/GFM/localisation/00000_Naimakka.csv
@@ -15,7 +15,7 @@ EVTOPTA48190004;Condemn the ritual murder!;;;;;;;;;;;;;
 EVTOPTB48190004;Sign the firman;;;;;;;;;;;;;
 SCA_colonial_company;The Commonwealth of Scandinavia;;;;;;;;;;;;;
 SCA_colonial_company_4;Seryyrossiya;;;;;;;;;;;;;
-SCA_colonial_company_4_ADJ;Seryyrossiyan;;;;;;;;;;;;;
+SCA_colonial_company_4_ADJ;Seryyrusskiy;;;;;;;;;;;;;
 SCA_proletarian_dictatorship;The Workers´Republic of Scandinavia;;;;;;;;;;;;;
 SWE_proletarian_dictatorship;The Peoples´Republic of Sweden;;;;;;;;;;;;;
 DNN_proletarian_dictatorship;The Republic of Denmark & Norway;;;;;;;;;;;;;
