fix to railroaded GCO

--- a/GFM/localisation/all_event_descriptions.csv
+++ b/GFM/localisation/all_event_descriptions.csv
@@ -1827,3 +1827,4 @@ EVTDESC9938891;\n\nWith the rising tide of nationalism in Mexico, our fort in Me
 EVTDESC42069751;\n\nWhich from the following should be our capital?;;;;;;;;;;;;;
 EVTDESC298081;\n\nThe Venezuelans have accepted to sign the treaty.;;;;;;;;;;;;;
 EVTDESC298082;\n\nThe Venezuelans has rejected to sign the treaty.;;;;;;;;;;;;;
+EVTDESC60168170;\n\nGran Colombia usually refuses to fight for its survival. Would you like Gran Colombia to fight for the restoration of the union or do you prefer them to die out altogether?;;;;;;;;;;;;;
