CB modding woohoo

--- a/GFM/localisation/00_UncivReforms.csv
+++ b/GFM/localisation/00_UncivReforms.csv
@@ -337,6 +337,10 @@ negotiated_transfer;Negotiated Transfer;;;;;;;;;;;;;
 negotiated_transfer_desc;Transfer a state or colonial region to another country with no effect on infamy, prestige, or jingoism;;;;;;;;;;;;;
 negotiated_transfer_short;$RECIPIENT$ receives $STATE$ from us;;;;;;;;;;;;;
 negotiated_transfer_setup;Transfer $STATE$ from our country to $RECIPIENT$;;;;;;;;;;;;;
+add_to_sphere_mp;Negotiated Sphering;;;;;;;;;;;;;
+add_to_sphere_mp_desc;Add a player country to your Sphere of Influence with no effect on infamy, prestige, or jingoism.;;;;;;;;;;;;;
+add_to_sphere_mp_short;$RECIPIENT$ becomes our sphereling;;;;;;;;;;;;;
+add_to_sphere_mp_setup;Add $RECIPIENT$ to Sphere of Influence;;;;;;;;;;;;;
 NORMAL_WAR_NEGOTIATE_NAME;$ORDER$$SECOND$ Transfer of $STATE$ to $FIRST_COUNTRY$;;;;;;;;;;;;;
 AGRESSION_WAR_NEGOTIATE_NAME;$ORDER$$SECOND$ Transfer of $STATE$ to $FIRST_COUNTRY$;;;;;;;;;;;;;
 demand_for_allies;Demand for Ally;;;;;;;;;;;;;
