--- a/GFM/localisation/000_Garcia.csv
+++ b/GFM/localisation/000_Garcia.csv
@@ -354,3 +354,5 @@ guerrero_final_victory_desc;By winning the civil war and exiling General Santa A
 EVTDESC4207103;\n\nThe troops commanded by General Guerrero have successfully defeated the forces of Bustamante who has now abdicated to our cause, accepting to order his guards to lower their weapons in exchange for amnesty.;;;;;;;;;;;;;
 EVTDESC42071031;\n\nThe troops commanded by General Santa Anna have successfully defeated the forces of Bustamante who has now abdicated to our cause, accepting to order his guards to lower their weapons in exchange for amnesty.;;;;;;;;;;;;;
 EVTDESC4207104;\n\nOur troops have successfully decimated the centralist forces and their leaders have approached us to lay down their weapons in exchange for amnesty, needless to say if we are to stop the bloodshed, we must accept.;;;;;;;;;;;;;
+REJECTANNEXHSAT;$FROMCOUNTRY$ Refuses to Join!;;;;;;;;;;;;;
+ACCEPTANNEXHSAT;$FROMCOUNTRY$ Agrees to Join!;;;;;;;;;;;;;
