Swedish baltic colonial flags

--- a/GFM/localisation/Colonial_country_names.csv
+++ b/GFM/localisation/Colonial_country_names.csv
@@ -124,8 +124,11 @@ UBD_colonial_company;Liflyandskaya Guberniya;;;;;;;;;;;;;
 UBD_colonial_company_ADJ;Livonian;;;;;;;;;;;;;
 UBD_colonial_company_3;Storhertigdömet Livland;;;;;;;;;;;;;
 LAT_colonial_company;Kurlyandskaya Guberniya;;;;;;;;;;;;;
+LAT_colonial_company_3;Hertigdömet Lettland;;;;;;;;;;;;;
 LAT_colonial_company_ADJ;Curonian;;;;;;;;;;;;;
+LIT_colonial_company_3;Furstendömet Litauen;;;;;;;;;;;;;
 EST_colonial_company;Estlyandskaya Guberniya;;;;;;;;;;;;;
+EST_colonial_company_3;Hertigdömet Estland;;;;;;;;;;;;;
 TCA_colonial_company;Kavkazskoye Namestnichestvo;;;;;;;;;;;;;
 LSK_colonial_company;Dominion of Alaska;;;;;;;;;;;;;
 LSK_colonial_company_3;Sankaido;;;;;;;;;;;;;
