--- a/GFM/localisation/Colonial_country_names.csv
+++ b/GFM/localisation/Colonial_country_names.csv
@@ -599,6 +599,7 @@ XIN_colonial_company_4;Shinkyo Jichi-Seifu;;;;;;;;;;;;;
 YAK_colonial_company_4;Yakuto Jichi-Ku;;;;;;;;;;;;;
 GRE_colonial_company_4;Regno di Grecia;;;;;;;;;;;;;
 FIN_colonial_company_4;Hertigdömet Finland;;;;;;;;;;;;;
+KRL_colonial_company_3;Hertigdömet Karelen;;;;;;;;;;;;;
 KHI_colonial_company_4;Khivinskoye Khanstvo;;;;;;;;;;;;;
 BUK_colonial_company_4;Bukharskiy Emirat;;;;;;;;;;;;;
 CLC_colonial_company;Cilicia;;;;;;;;;;;;;
