--- a/GFM/localisation/00_HPM_map.csv
+++ b/GFM/localisation/00_HPM_map.csv
@@ -547,7 +547,7 @@ PROV3289;Tschakathurn;;;;;;;;;;;;;
 PROV3290;Bosilegrad;;;;;;;;;;;;;
 PROV3291;Kumanova;;;;;;;;;;;;;
 PROV3292;Al Salman;;;;;;;;;;;;;
-PROV3293;Bayburt;;;;;;;;;;;;;
+PROV3293;Ispir;;;;;;;;;;;;;
 PROV3294;Derik;;;;;;;;;;;;;
 PROV3295;Pematang Siantar;;;;;;;;;;;;;
 PROV3296;Kipula;;;;;;;;;;;;;
@@ -598,7 +598,7 @@ PROV3341;Augustow;;;;;;;;;;;;;
 PROV3342;Kilkis;;;;;;;;;;;;;
 PROV3343;Louvain;;;;;;;;;;;;;
 PROV3344;Terneuzen;;;;;;;;;;;;;
-PROV3345;Mersin;;;;;;;;;;;;;
+PROV3345;Kozan;;;;;;;;;;;;;
 PROV3346;Ürgüp;;;;;;;;;;;;;
 PROV3347;Aleksinac;;;;;;;;;;;;;
 PROV3348;Mousiyan;;;;;;;;;;;;;
