--- a/GFM/localisation/0000Sitka.csv
+++ b/GFM/localisation/0000Sitka.csv
@@ -1349,8 +1349,10 @@ NET_radical_republic;Batavian Republic;;;;;;;;;;;;;
 NET_radical_republic_ADJ;Batavian;;;;;;;;;;;;;
 RHI_radical_republic;Cisrhenian Republic;;;;;;;;;;;;;
 RHI_radical_republic_ADJ;Cisrhenian;;;;;;;;;;;;;
-SAR_radical_republic;Piedmontese Republic;;;;;;;;;;;;;
-SAR_radical_republic_ADJ;Piedmontese;;;;;;;;;;;;;
+SAR_radical_republic;Subalpine and Sardinian Republic;;;;;;;;;;;;;
+SAR_radical_republic_ADJ;Subalpine-Sardinian;;;;;;;;;;;;;
+SVY_radical_republic;Subalpine Republic;;;;;;;;;;;;;
+SVY_radical_republic_ADJ;Subalpine;;;;;;;;;;;;;
 SIC_radical_republic;Parthenopean Republic;;;;;;;;;;;;;
 SIC_radical_republic_ADJ;Parthenopean;;;;;;;;;;;;;
 LOM_radical_republic;Transpadane Republic;;;;;;;;;;;;;
